Fix form section overflow

--- a/style.css
+++ b/style.css
@@ -73,8 +73,10 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
     padding: 1rem;
     color: var(--text-color);
+    overflow: auto;
 }
 
 header {
